<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_cat_detection">

        <EditTextPreference
            android:key="pref_threshold"
            android:title="@string/pref_threshold_title"
            android:defaultValue="1"
            app:useSimpleSummaryProvider="false" />

        <SwitchPreferenceCompat
            android:key="pref_video_enabled"
            android:title="@string/pref_video_title"
            android:summary="@string/pref_video_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_notifications">

        <SwitchPreferenceCompat
            android:key="pref_notifications_enabled"
            android:title="@string/pref_notifications_title"
            android:summary="@string/pref_notifications_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_admin">

        <Preference
            android:key="pref_open_admin"
            android:title="@string/pref_admin_title"
            android:summary="@string/pref_admin_summary" />
    </PreferenceCategory>

</PreferenceScreen>
